# Swiggy_challenge

./: .gitignore  DATA.md  README.md  pyproject.toml
data/interim/task_a/: clean_v1.jsonl
data/interim/task_b/: clean_v2.jsonl
data/interim/task_c/: clean_v3.jsonl
data/processed/task_a/: label_maps.json  test.jsonl  train.jsonl  val.jsonl
data/processed/task_b/: test.jsonl  train.jsonl  val.jsonl
data/processed/task_c/: test.jsonl  train.jsonl  val.jsonl
data/synthetic/task_a/: prompt.md
data/synthetic/task_b/: prompt.md
data/synthetic/task_c/: prompt.md  synthetic_v3.jsonl
models/task_a/onnx/: task_a_intent_slot.int8.onnx  task_a_intent_slot.onnx
models/task_b/onnx/: task_a_intent_slot.int8.onnx
models/task_c/onnx/: task_a_intent_slot.int8.onnx  task_c_spans.onnx
models/tokenizer/task_a/: spm.model  spm.vocab  spm_train_text.txt  tokenizer_meta.json
models/tokenizer/task_b/: spm.model  spm.vocab  spm_train_text.txt  tokenizer_meta.json
outputs/qualitative_examples/: task_a.md  task_b.md  task_c.md
scripts/: benchmark_infer.py  build_tokenizer.py  build_tokenizer_b.py  evaluate.py  evaluate_task_b.py  evaluate_task_c.py  export_onnx.py  export_task_b_onnx.py  export_task_c_onnx.py  make_dataset_a.py  make_dataset_b.py  make_dataset_c.py  preprocess.py  run_task_a_onnx.py  run_task_b.py  run_task_b_onnx.py  run_task_c.py  run_task_c_onnx.py  train_task_a.py  train_task_b.py  train_task_c.py
src/opa/data/: collate.py  dataset_a.py  dataset_b.py  dataset_c.py  schemas.py
src/opa/export/: quantize.py  validate_export.py
src/opa/inference/: runtime.py  task_b_runtime.py  task_c_runtime.py
src/opa/models/task_a/: losses.py  model.py
src/opa/models/task_b/: decoding.py  losses.py  model.py
src/opa/tokenization/: spm_train.py  tokenizer.py  vocab.py
src/opa/training/: trainer.py
src/opa/utils/: text_norm.py
tests/: test_export.py  test_inference_smoke.py  test_schemas.py  test_tokenizer.py
(+2 files in other folders)
